--- a/package.json
+++ b/package.json
@@ -11,8 +11,16 @@
     "@vitejs/plugin-react": "4.1",
     "vite": "^4.5.0"
   },
-  "dependencies": {
-    "react": "18.2",
-    "react-dom": "18.2"
+"dependencies": {
+    "@pmndrs/assets": "1.6.0",
+    "@pmndrs/branding": "0.0.8",
+    "@react-three/drei": "9.108.3",
+    "@react-three/fiber": "8.16.8",
+    "@types/three": "0.152.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-scripts": "5.0.1",
+    "three": "0.166.1",
+    "wouter": "2.11.0"
   }
 }
