--- a/package.json
+++ b/package.json
@@ -12,14 +12,11 @@
     "vite": "^4.5.0"
   },
 "dependencies": {
-    "@pmndrs/assets": "1.6.0",
-    "@pmndrs/branding": "0.0.8",
     "@react-three/drei": "9.108.3",
     "@react-three/fiber": "8.16.8",
     "@types/three": "0.152.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "three": "0.166.1",
-    "wouter": "2.11.0"
+    "three": "0.166.1"
   }
 }
