--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
     "vite": "^4.5.0"
   },
 "dependencies": {
-    "@react-three/drei": "9.108.3",
-    "@react-three/fiber": "8.16.8",
-    "@types/three": "0.152.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "three": "0.166.1"
+    "@react-three/drei": "^9.88.7",
+    "react": "18.2",
+    "react-dom": "18.2",
+    "@react-three/fiber": "^8.15.8",
+    "three": "^0.158.0"
   }
 }
