--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.2",
     "react-dom": "18.2",
     "@react-three/fiber": "^8.15.8",
-    "three": "^0.158.0"
+    "three": "^0.158.0",
+    "wouter": "2.11.0"
   }
 }
